# hero-api

./: .env  Cargo.toml  Makefile  README.md  Rocket.toml  build.rs
config/: development.toml
jobs/: Cargo.toml
migrations/2018-12-13-184405_create_hero_table/: up.sql
migrations/2018-12-14-000037_add_unique_indexes/: down.sql  up.sql
migrations/2018-12-19-024632_add_image_url/: down.sql  up.sql
migrations/2019-07-09-084258_create_people_table/: up.sql
migrations/2019-07-11-063733_create_users/: up.sql
migrations/2019-07-11-065810_create_login_history_table/: up.sql
src/: api_error.rs  db.rs  hero.rs  jwt.rs  lib.rs  main.rs  schema.rs  tests.rs
src/api/: mod.rs
src/api/controllers/: hero_controller.rs  mod.rs  people_auth_controller.rs  people_controller.rs  user_controller.rs
src/api/errors/: handlers.rs
src/api/repo/: mod.rs  people_repo.rs  user_repo.rs
src/constants/: message_constants.rs  mod.rs
src/dbs/: redis.rs
src/hero/: handler.rs  mod.rs
src/models/: hero.rs  login_history.rs  mod.rs  people.rs  response.rs  user.rs
src/people/: handler.rs  mod.rs  router.rs
src/settings/: mod.rs
ui/: package-lock.json  package.json
ui/src/: AppHeader.css  AppHeader.js  AppHeader.test.js  api.js  duck.js  index.js
ui/src/CreateHero/: CreateHero.css  index.js
ui/src/HeroCard/: index.js
ui/src/HeroDetail/: index.js
ui/src/Home/: index.js
