[package]
name = "hero-api"
version = "0.1.0"
authors = ["Kevin Chen <kevinmichaelchen@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
dotenv = "0.10"
chrono = { version = "0.4", features = ["serde"] }
config = "0.9.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_mysql_pool"]

[dependencies.rocket_cors]
version = "0.4.0"
default-features = false
