[package]
name = "jobs"
version = "0.1.0"
authors = ["tarzansos <tuminfei1981@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hero_lib"
path = "../src/lib.rs"

[dependencies]
rocket = "0.4.2"
#rocket-accept-language = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.6", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.9.3"
redis = "0.9.0"
r2d2 = "*"
r2d2_redis = "0.9.0"

#schedule
schedule = "0.1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_mysql_pool"]

